--- a/style/style.css
+++ b/style/style.css
@@ -86,6 +86,12 @@ header {
     height: 200pt;
 }
 
+.subtitle{
+    color: #43D9D9;
+    font-weight: bolder;
+    font-size: 2rem;
+}
+
 /* Footer */
 
 footer {
