--- a/style/style.css
+++ b/style/style.css
@@ -135,4 +135,16 @@ footer {
     padding-top: 1rem;
 }
 
+#carrusel {
+    height: 20%;
+    width: 20%;
+    margin: 1%;
+}
+
+#carrusel2 {
+    height: 50%;
+    width: 20%;
+    margin: 1%;
+}
+
 
